<resources>
    <string name="app_name">Aplikasi Antisipasi Covid 19</string>
    <string name="login">LOGIN</string>
    <string name="reg">REGISTER</string>
    <string name="signup">SIGN UP</string>
    <string name="antisipasi">Antisipasi</string>
    <string name="covid19">COVID19</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="label">Aplikasi Antisipasi Covid 19</string>
    <string name="username">Username</string>
    <string name="update_covid">Update Covid di Indonesia</string>
    <string name="update_covid_global">Update Covid di Seluruh Dunia</string>
    <string name="tips_trick"><![CDATA[Tips & Trick]]></string>
    <string name="lokasi_medis">Lokasi Medis</string>
    <string name="gejala">Gejala</string>
    <string name="cek_diri">Cek Diri</string>
    <string name="profile">Profile</string>
    <string name="provinsi">Provinsi</string>
    <string name="meninggal">Meninggal</string>
    <string name="positif">Positif</string>
    <string name="sembuh">Sembuh</string>
    <string name="txtMeninggal">259</string>
    <string name="txtPositif">5</string>
    <string name="txtSembuh">6</string>
    <string name="negara">Negara</string>
</resources>
