<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splashscreen"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    >

    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="200dp"
        >
        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/antisipasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antisipasi"
            android:textSize="35sp"
            />

        <ImageView
            android:id="@+id/titlePict"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/title"
            />
        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/covid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/covid19"
            android:textSize="35sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleContainer"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="220dp"
        >


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonbg"
            android:text="@string/login"
            android:textSize="30sp"
            android:textColor="@color/putih"

            />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/buttonSignUp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/signupbt"
            android:orientation="horizontal"
            android:text="@string/signup"
            android:textSize="30sp"
            android:textColor="@color/putih"
            />
    </LinearLayout>




</RelativeLayout>